message EchoRequest {
	required string name = 1;
}

message EchoReply {
	required string name = 1;
}

service EchoService {
 	rpc echo (EchoRequest) returns (EchoReply);
}
